2004-05-11	blytkerchan	make libmemory optional for compilation (parent might have it)
	* Makefile.am [HAVE_LIBMEMORY]: new conditional
	[DIST_SUBDIRS]: conditionally add libmemory
	[libcontain_la_LIBADD]: conditionally search for libmemory in parent dir
	[AM_CXXFLAGS]: remove arch/include, add $(top_srcdir)
	* configure.in: check that libmemory is in this dir. define automake conditional HAVE_LIBMEMORY accordingly
	re-indent

add missing files..
	* types.h: new file

start implementing list-based hash
	* hash.c: include libmemory headers
	(hash_node_new): new function
	(hash_node_free): ditto
	(hash_node_cmp): ditto
	(hash_new): take new parameter n_buckets
	enclose hash type parameter in conditional block
	return newly created hash even if the type is not well-specified
	enclose old code in conditional block
	(hash_free_helper): new function
	(hash_free): free the hash (new type, type not specified)
	enclose old code in conditional block
	(hash_get): enclose old code in conditional block
	implement getting from new implementation
	* hash.h: reflect above changes
	* hash_config.h.in: add DONT_USE_OBSOLETE
	* libcontain_config.h: bump LIBCONTAIN_MIN_HPTRS
start normalizing interfaces
	* map.c: s/map_key_cmp_func_t/libcontain_cmp_func_t/g
	(map_free_helper): constify
	(map_remove_helper): ditto
	* map.h: reflect above changes
	* list.c: s/list_compare_fn_t/libcontain_cmp_func_t/g
	(list_node_free): rename from list_free_node
	(list_node_new): rename from list_new_node
	(list_node_insert): rename from list_insert_node
	(list_insert): reflect above
	(list_new): rename from new_list
	(list_free): new function
	(list_foreach): ditto
	* list.h: reflect above changes
	* heap.c: s/heap_val_cmp_func_t/libcontain_cmp_func_t/g
	(heap_free_helper): constify, cast to compensate
	* heap.h: reflect above changes
	* hash.c: s/hash_val_cmp_func_t/libcontain_cmp_func_t/g
	s/hash_key_hash_func_t/libcontain_hash_func_t/g
	s/hash_key_cmp_func_t/libcontain_cmp_func_t/g